# cognitive-memory-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  POC_STATUS.md  README.md  ROADMAP.md  SPRINT_0.2_STATUS.md  pyproject.toml  requirements.txt  setup.py  z_human.md
.cursor/rules/: README.md  centralized-path-management.md  code-reuse-guidelines.md  config-management.mdc  context-file-handling copy.mdc  demo-execution-guidelines.md  doc_md_rule.md  feedback-rating.mdc  human-notes.md  installation-guidelines.md  no-fallbacks-hardcoded-defaults.md  package-structure-guidelines.md  path-guidelines.md  powershell-windows.mdc  quick-reference.md  unicode.mdc  uv-cache-workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  sprint_0.2_backlog.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: SETUP.md  TROUBLESHOOTING.md  USAGE_FROM_OTHER_PROJECTS.md  compress_decay.md  reflector.md
docs/_ai/: ai_context.md  ai_guidelines.md  ai_project_map.yaml  ai_status.md
docs/_project/: concept.md  goal.md  index.md  information_types.md  remote_mobile_memory_spec.md  status_human.md  structure.md
docs/stories/: nad_boosters_story.md
inflow/: new_nad_info.txt
inflow/processed/: idea_memory.md  test_note.txt
knowledge/: 2025-11-06-memory-design.md  KB-20251107-001.md  KB-20251107-002.md  KB-20251107-003.md  KB-20251107-004.md  KB-20251107-005.md
src/: __init__.py  cli.py
src/cmemory/: __init__.py  cli_entry.py  memory.py  models.py
stories/nad_boosters/: README.md  (+4 more)
templates/: reflect.jinja
tests/: __init__.py  conftest.py  test_compress.py  test_decay.py  test_e2e.py  test_file_storage.py  test_inflow_processor.py  test_memory_system.py  test_reflection_e2e.py  test_reflector.py  test_reindex_all.py  test_retrieval_explain.py  test_retrieval_structured.py  test_rrf_fusion.py  test_user_story_nad.py  test_vector_hybrid.py  test_vector_openai.py
(+19 files in other folders)
